updated microsoft image and margin in client section

--- a/src/App.css
+++ b/src/App.css
@@ -30,6 +30,7 @@
   font-weight: 400;
   line-height: normal;
   margin-bottom: 0 !important;
+  letter-spacing: -2.04px;
 }
 .Heading_Para p {
   color: #000;
